Fix title overflow

--- a/src/ShotView.css
+++ b/src/ShotView.css
@@ -91,7 +91,7 @@
 }
 
 #view-title{
-    padding: 10px 0px 0px 0px;
+    padding: 10px;
     font-size: 20px;
     text-align: center;
     height: fit-content ;
